--- a/src/App.css
+++ b/src/App.css
@@ -43,20 +43,6 @@
   margin: 5px;
   background-color: rgb(255, 235, 59);
 }
-.dcircle {
-  width: 30px;
-  height: 30px;
-  border-radius: 30px;
-  margin: 5px;
-  background-color: rgb(255, 235, 59);
-}
-.dcircle:hover {
-  width: 30px;
-  height: 30px;
-  border-radius: 30px;
-  margin: 5px;
-  background-color: rgb(238, 139, 73);
-}
 
 .click {
   width: 30px;
@@ -84,7 +70,7 @@
 .tri:hover {
   appearance: none;
   background-color: transparent;
-  border-color: transparent rgb(221, 210, 49);
+  border-color: transparent gold;
   width: 0px;
   height: 0px;
   border-top-width: 1.5rem;
@@ -124,83 +110,13 @@
   color: rgb(255, 255, 255);
 }
 
-.btn10 {
+.detailbutton:hover {
   width: 100%;
-  background-color: purple;
-  border: none;
+  background-color: gold;
+
   border-radius: 5px;
   padding: 1rem;
-  color: rgb(255, 255, 255);
-  top: 40px;
-  text-transform: uppercase !important;
-  letter-spacing: 2px;
-  cursor: hand;
-  text-align: center;
-  text-transform: capitalize;
-  border: 1px solid #fff;
-  border-radius: 50px;
-  position: relative;
-  overflow: hidden !important;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  z-index: 10;
-}
-.btn10:hover {
-  border: 1px solid #071982;
-  color: #ffffff !important;
-}
-.btn10::before {
-  content: "";
-  width: 0%;
-  height: 100%;
-  display: block;
-  background: #6678dd;
-  position: absolute;
-  -ms-transform: skewX(-20deg);
-  -webkit-transform: skewX(-20deg);
-  transform: skewX(-20deg);
-  left: -10%;
-  opacity: 1;
-  top: 0;
-  z-index: -12;
-  -moz-transition: all 0.7s cubic-bezier(0.77, 0, 0.175, 1);
-  -o-transition: all 0.7s cubic-bezier(0.77, 0, 0.175, 1);
-  -webkit-transition: all 0.7s cubic-bezier(0.77, 0, 0.175, 1);
-  transition: all 0.7s cubic-bezier(0.77, 0, 0.175, 1);
-  box-shadow: 2px 0px 14px rgba(121, 190, 236, 0.6);
-}
-
-.btn10::after {
-  content: "";
-  width: 0%;
-  height: 100%;
-  display: block;
-  background: #63bece;
-  position: absolute;
-  -ms-transform: skewX(-20deg);
-  -webkit-transform: skewX(-20deg);
-  transform: skewX(-20deg);
-  left: -10%;
-  opacity: 0;
-  top: 0;
-  z-index: -15;
-  -webkit-transition: all 0.94s cubic-bezier(0.2, 0.95, 0.57, 0.99);
-  -moz-transition: all 0.4s cubic-bezier(0.2, 0.95, 0.57, 0.99);
-  -o-transition: all 0.4s cubic-bezier(0.2, 0.95, 0.57, 0.99);
-  transition: all 0.4s cubic-bezier(0.2, 0.95, 0.57, 0.99);
-  box-shadow: 2px 0px 14px rgba(0, 0, 0, 0.6);
-}
-.btn10:hover::before,
-.btn1O:hover::before {
-  opacity: 1;
-  width: 116%;
-}
-.btn10:hover::after,
-.btn1O:hover::after {
-  opacity: 1;
-  width: 120%;
+  color: black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
